# LibRPA

./: .clang-format  .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  Gauss_Quadrature.cpp  LICENSE  Makefile  README.md  aperiodic_chi0.cpp  aperiodic_chi0.h  atoms.h  bak_0816_cal_periodic_chi0.cpp  bak_Makefile  build.sh  cal_periodic_chi0.cpp  cal_periodic_chi0.h  cmake.inc  complexmatrix.cpp  constants.cpp  constants.h  global_class.cpp  global_class.h  input.cpp  input.h  lapack_connector.h  lib_main.cpp  lib_main.h  make.inc  matrix.cpp  parallel_mpi.cpp  parallel_mpi.h  profiler.cpp  profiler.h  read_aims.cpp  read_aims.h  ri.cpp  ri.h  timefreq.cpp  timefreq.h  (+1 more)
binding/fortran/: CMakeLists.txt  librpa_f.f90  librpa_f03.f90  librpa_f03_old.f90  librpa_f03_stubs.f90
binding/fortran/test/: CMakeLists.txt  test_f03_binding.f90  test_f03_binding_call_internal_test.f90  test_f03_binding_exx_bccHe.f90  test_f03_binding_libri.f90
docs/: Makefile  (+13 more)
driver/: CMakeLists.txt  driver.cpp  driver.h  driver_params.cpp  driver_params.h  driver_utils.cpp  driver_utils.h  inputfile.cpp  inputfile.h  lib_main.cpp  lib_main.h  main.cpp  main.h  main_old.cpp  read_aims.cpp  read_aims.h  read_data.cpp  read_data.h  task.cpp  task.h  task_exx.cpp  task_exx.h  task_exx_band.cpp  task_gw.cpp  task_gw.h  task_gw_band.cpp  task_gw_band.h  task_hf_band.cpp  task_hf_band.h  task_qsgw.cpp  task_qsgw.h  task_qsgwA.cpp  task_qsgwA.h  task_qsgw_band.cpp  task_qsgw_band.h  task_rpa.cpp  task_rpa.h  task_scRPA.cpp  task_scRPA.h  task_scRPA_band.cpp  (+6 more)
driver/task/: exx.cpp  exx_band.cpp  g0w0.cpp  g0w0_band.cpp  gw_band.cpp  print_minimax.cpp  rpa.cpp  test.cpp
qsgw/: CMakeLists.txt  Hamiltonian.cpp  Hamiltonian.h  convert_csc.cpp  convert_csc.h  fermi_energy_occupation.cpp  fermi_energy_occupation.h
src/: CMakeLists.txt  Gauss_Quadrature.h  Makefile  analycont.cpp  analycont.h  aperiodic_chi0.h  app_exx.cpp  app_rpa.cpp  app_rpa.h  atomic_basis.cpp  atomic_basis.h  atoms.h  base_blacs.cpp  base_blacs.h  base_mpi.cpp  base_mpi.h  base_utility.h  blas_connector.h  cal_periodic_chi0.cpp  cal_periodic_chi0.h  chi0.cpp  chi0.h  complexmatrix.cpp  complexmatrix.h  constants.cpp  constants.h  conventional_chi0.cpp  conventional_chi0.h  coulmat.cpp  coulmat.h  d_chi0.cpp  d_chi0.h  dielecmodel.cpp  dielecmodel.h  envs.cpp  envs.cpp.in  envs.h  envs_blacs.cpp  envs_dir.cpp  envs_dir.cpp.in  (+88 more)
src/api/: app_exx.cpp  app_exx.h  app_gw.cpp  app_gw.h  app_rpa.cpp  app_rpa.h  compute_exx.cpp  compute_g0w0.cpp  compute_rpa.cpp  compute_test.cpp  dataset.cpp  dataset.h  dataset_helper.cpp  dataset_helper.h  global.cpp  global.h  handler.cpp  handler.h  input.cpp  instance_manager.cpp  instance_manager.h  librpa.cpp  librpa.h  librpa_compute.cpp  librpa_global.cpp  librpa_handler.cpp  librpa_main.cpp  librpa_main.h  librpa_old.cpp  librpa_old.h  options.cpp
src/core/: analycont.cpp  analycont.h  atom.h  atomic_basis.cpp  atomic_basis.h  atoms.cpp  atoms.h  chi0.cpp  chi0.h  coulmat.cpp  coulmat.h  dataset.cpp  dataset.h  dielecmodel.cpp  dielecmodel.h  epsilon.cpp  epsilon.h  exx.cpp  exx.h  geometry.cpp  geometry.h  gw.cpp  gw.h  meanfield.cpp  meanfield.h  meanfield_mpi.cpp  meanfield_mpi.h  minimax.h  minimax_gx.cpp  minimax_local.cpp  params.cpp  params.h  pbc.cpp  pbc.h  qpe_solver.cpp  qpe_solver.h  ri.cpp  ri.h  task.h  timefreq.cpp  (+7 more)
src/global/: instance_manager.cpp  instance_manager.h  mpi_handler.cpp  mpi_handler.h
src/interface/: blacs_scalapack.h  blas_lapack.h  gx_minimax_wrp.f90  gx_minimax_wrp.h  mpi.h
src/io/: envs_io.cpp  envs_io.h  fs.cpp  fs.h  global_io.cpp  global_io.h  input_elsi.cpp  input_elsi.h  output_aims.cpp  output_aims.h  stl_io_helper.hpp  utils_mpi_io.h
src/lebedev-quadrature/: CMakeLists.txt  README.md  generator_point.hpp  generator_point.inl  preprocessor.hpp  quadrature_order.hpp  quadrature_order.inl  quadrature_points.hpp  quadrature_points.inl
src/math/: complexmatrix.cpp  complexmatrix.h  fitting.cpp  fitting.h  interpolate.cpp  interpolate.h  lapack_connector.h  lebedev_laikov.cpp  lebedev_laikov.h  mathtools.cpp  mathtools.h  matrix.cpp  matrix.h  matrix3.cpp  matrix3.h  matrix_m.h  scalapack_connector.h  utils_matrix_m.h  utils_matrix_m_mpi.h  utils_matrix_mpi.cpp  utils_matrix_mpi.h  vec.h  vector3.h  vector3_order.cpp  vector3_order.h
src/minimax_grid/: gw_librpa_prototype.py  pyjob_sub.sh
src/minimax_grid/10/: freq_grid.txt  time2freq_transform_grid.txt
src/minimax_grid/18/: INFO.txt  time_grid.txt
src/minimax_grid/20/: INFO.txt  freq_grid.txt  time2freq_transform_grid.txt
src/minimax_grid/22/: minimax_grid_main.py
src/minimax_grid/24/: minimax_grid_main.py  read_grid.py  time2freq_transform_grid.py
src/minimax_grid/6/: INFO.txt  modi_leastsq.py
src/mpi/: base_blacs.cpp  base_blacs.h  base_mpi.cpp  base_mpi.h  envs_blacs.cpp  envs_blacs.h  envs_mpi.cpp  envs_mpi.h  global_mpi.cpp  global_mpi.h  utils_blacs.cpp  utils_blacs.h  utils_mpi_io.h
src/qsgw/: fermi_energy_occupation.h
src/test/: CMakeLists.txt  test_analycont.cpp  test_atomic_basis.cpp  test_atomic_basis_blacs.cpp  test_atoms.cpp  test_base_mpi.cpp  test_base_utility.cpp  test_blacs.cpp  test_blas_lapack.cpp  test_complexmatrix.cpp  test_dataset.cpp  test_fitting.cpp  test_geometry.cpp  test_io.cpp  test_lebedev_laikov.cpp  test_librpa.cpp  test_matrix.cpp  test_matrix_m.cpp  test_matrix_m_mpi.cpp  test_matrix_m_parallel_utils.cpp  test_meanfield.cpp  test_meanfield_mpi.cpp  test_parallel_mpi.cpp  test_pbc.cpp  test_timefreq.cpp  testutils.h
src/utils/: base_utility.h  constants.cpp  constants.h  envs_cmake.cpp.in  envs_cmake.h  envs_io.cpp  error.h  libri_stub.h  libri_utils.h  profiler.cpp  profiler.h  stl_io_helper.h  stl_io_helper.hpp  utils_cmake.cpp  utils_cmake.h  utils_io.h  utils_mem.cpp  utils_mem.h
tests/: CMakeLists.txt  Makefile  test_atomic_basis.cpp  test_atoms.cpp  test_blas_lapack.cpp  test_complexmatrix.cpp  test_matrix.cpp  test_matrix_m.cpp  test_matrix_m_parallel_utils.cpp  test_meanfield.cpp  test_parallel_mpi.cpp  test_pbc.cpp  test_timefreq.cpp  testutils.h
(+328 files in other folders)
